--- a/public/style.css
+++ b/public/style.css
@@ -1,14 +1,13 @@
-body
-{
-  width: 100%;
-  height: 100%;
+* {
+  margin: 0;
+  padding: 0%;
+  box-sizing: border-box;
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
-
 
 .header_logo {
   width: 150px;
@@ -17,7 +16,7 @@ a {
 }
 
 .map {
-  background-color: rgb(228, 228, 228);
+  background-color: #e4e4e4;
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -29,44 +28,37 @@ a {
 }
 
 .explorer {
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   width: 100%;
-  
-
 }
-
-.explorer_texte_1
-{
-  font-size: 15px;
-    margin-top: .5rem;
-    margin-bottom: 2.5rem;
+.explorer_button {
+  border-radius: 24px;
+  padding: 16px;
+  width: fit-content;
+  box-shadow: 8px 8px 8px gray;
+  background-color: #9356DC;
+  color: #FFFFFF;
+  margin: 0 auto;
 }
-
-
-
-
 
 .fonctionnement {
   width: auto;
   border-bottom: 50px;
-  border: solid #F2F2F2;
+  border: solid #f2f2f2;
   height: 50px;
   display: flex;
   position: relative;
   padding-left: 52px;
-  margin: .5rem;
+  margin: 0.5rem;
 }
 
 .fonctionnement_texte {
-  
   color: black;
   font-weight: bold;
   text-decoration: none;
-  background-color: #9356DC;
+  background-color: #9356dc;
   border-radius: 25px;
 }
-  
-
 
 .fonctionnement_icone {
   width: 20px;
@@ -75,7 +67,6 @@ a {
   top: -2px;
   left: -2px;
 }
-  
 
 .filtre_icone img {
   width: 20px;
@@ -84,13 +75,9 @@ a {
   margin-top: 14px;
 }
 
-
-
 .restaurants {
-
   width: 100%;
   height: 100%;
-  
 }
 
 .restaurants_articles {
@@ -102,9 +89,8 @@ a {
   margin: 0 auto 2rem;
 }
 
-.restaurants
-{
-  background-color: #F2F2F2;
+.restaurants {
+  background-color: #f2f2f2;
 }
 
 .restaurant_article_conteneur {
@@ -114,7 +100,8 @@ a {
   width: 300px;
   height: 200px;
   flex-direction: column;
-  box-shadow: 6px 6px 10px #F2F2F2;
+  box-shadow: 6px 6px 6px gray;
+  padding-left: 2rem;
 }
 
 .restaurant_article_image {
@@ -124,12 +111,13 @@ a {
   border-radius: 20px 20px 0px 0px;
 }
 
-.restaurant_article_etoile {
-  width: 20px;
-  padding-left: 16rem;
-  padding-bottom: px;
+.restaurant_article_coeur {
+  width: 10px;
+  padding-left: 20px;
 }
 
 .restaurantt_article_contenu {
   padding: 5px;
 }
+
+/*# sourceMappingURL=style.css.map */
