--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,21 +1,110 @@
+@use 'reset';
+@use 'variables';
+@use 'mixins';
 
-
-@mixin carte {border-radius: 20px;
-    box-shadow: 5px 5px black;
-    
+.header_logo {
+    width: 150px;
+    padding-left: 75px;
+    padding-top: 8px;
 }
-.test
-{
-    @include carte();
-    width: 500px;
-    height: 200px;
-    background-color: blue;
-    &__enner{
-        @include carte();
-        width: 100px;
-        background-color: black;
-        height: 300px;
-        border-radius: 30px;
-    }
 
+.map {
+    background-color: rgb(228, 228, 228);
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.icone_map {
+    width: 13px;
+    padding-left: 75px;
+}
+
+.explorer {
+    background-color: #f2f2f2;
+    width: 100%;
+    &_button {
+        @include mixins.button;
+        margin: 0 auto;
+    }
+}
+
+.fonctionnement {
+    width: auto;
+    border-bottom: 50px;
+    border: solid #f2f2f2;
+    height: 50px;
+    display: flex;
+    position: relative;
+    padding-left: 52px;
+    margin: 0.5rem;
+}
+
+.fonctionnement_texte {
+    color: black;
+    font-weight: bold;
+    text-decoration: none;
+    background-color: #9356dc;
+    border-radius: 25px;
+}
+
+.fonctionnement_icone {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: -2px;
+    left: -2px;
+}
+
+.filtre_icone img {
+    width: 20px;
+    height: 20px;
+    margin-left: 15px;
+    margin-top: 14px;
+}
+
+.restaurants {
+    width: 100%;
+    height: 100%;
+}
+
+.restaurants_articles {
+    margin-top: 1rem;
+}
+
+.restaurant_article {
+    display: block;
+    margin: 0 auto 2rem;
+}
+
+.restaurants {
+    background-color: #f2f2f2;
+}
+
+.restaurant_article_conteneur {
+    background-color: white;
+    border-radius: 20px;
+    display: flex;
+    width: 300px;
+    height: 200px;
+    flex-direction: column;
+    box-shadow: 6px 6px 6px gray;
+    padding-left: 2rem;
+}
+
+.restaurant_article_image {
+    width: 100%;
+    height: 130px;
+    object-fit: cover;
+    border-radius: 20px 20px 0px 0px;
+}
+
+.restaurant_article_coeur {
+    width: 10px;
+    padding-left: 20px;;
+   
+}
+
+.restaurantt_article_contenu {
+    padding: 5px;
 }
