--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 * {
   margin: 0;
   padding: 0%;
@@ -9,63 +11,88 @@ a {
   text-decoration: none;
 }
 
+* {
+  font-family: "Roboto", sans-serif;
+}
+
 .header_logo {
-  width: 150px;
-  padding-left: 75px;
-  padding-top: 8px;
+  width: 170px;
+  margin: 1rem auto;
+  display: block;
+}
+
+span {
+  font-weight: bold;
+  font-size: 20px;
 }
 
 .map {
   background-color: #e4e4e4;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
+  padding: 1rem;
 }
 
 .icone_map {
-  width: 13px;
-  padding-left: 75px;
+  width: 10px;
 }
 
 .explorer {
-  background-color: #f2f2f2;
-  width: 100%;
+  background-color: #f6f6f6;
+  width: 380px;
+  height: 300px;
+  padding-top: 1rem;
 }
 .explorer_button {
   border-radius: 24px;
   padding: 16px;
   width: fit-content;
-  box-shadow: 8px 8px 8px gray;
+  box-shadow: 4px 4px 4px gainsboro;
   background-color: #9356DC;
   color: #FFFFFF;
   margin: 0 auto;
 }
 
+.explorer_title {
+  text-align: center;
+  margin: 2rem;
+}
+
+.explorer_content {
+  text-align: center;
+  margin: 2rem;
+}
+
+.fonctionnement_title {
+  margin: 1rem;
+}
+
+.fonctionnements {
+  width: 100%;
+  height: 100%;
+}
+
 .fonctionnement {
   width: auto;
-  border-bottom: 50px;
-  border: solid #f2f2f2;
-  height: 50px;
+  border-radius: 20px;
+  height: 70px;
   display: flex;
   position: relative;
   padding-left: 52px;
   margin: 0.5rem;
+  background-color: #f6f6f6;
+  box-shadow: 3px 3px 3px gainsboro;
 }
 
 .fonctionnement_texte {
-  color: black;
-  font-weight: bold;
-  text-decoration: none;
-  background-color: #9356dc;
-  border-radius: 25px;
+  text-align: center;
 }
 
 .fonctionnement_icone {
   width: 20px;
   height: 20px;
-  position: absolute;
-  top: -2px;
-  left: -2px;
+  margin-right: 100px;
 }
 
 .filtre_icone img {
@@ -81,43 +108,63 @@ a {
 }
 
 .restaurants_articles {
-  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
 }
 
 .restaurant_article {
   display: block;
   margin: 0 auto 2rem;
+  width: 100%;
 }
 
 .restaurants {
-  background-color: #f2f2f2;
+  background-color: #f6f6f6;
+}
+
+.restaurants_title {
+  margin: 1rem;
 }
 
 .restaurant_article_conteneur {
   background-color: white;
   border-radius: 20px;
   display: flex;
-  width: 300px;
-  height: 200px;
+  width: 340px;
+  height: 240px;
   flex-direction: column;
-  box-shadow: 6px 6px 6px gray;
-  padding-left: 2rem;
+  box-shadow: 4px 4px 4px gainsboro;
 }
 
 .restaurant_article_image {
   width: 100%;
-  height: 130px;
+  height: 160px;
   object-fit: cover;
   border-radius: 20px 20px 0px 0px;
 }
 
 .restaurant_article_coeur {
-  width: 10px;
-  padding-left: 20px;
+  width: 25px;
+  margin-left: 18rem;
 }
 
-.restaurantt_article_contenu {
+.restaurant_article_contenu {
   padding: 5px;
+}
+
+.footer {
+  background-color: #353535;
+}
+.footer_logo {
+  width: 100px;
+  margin-top: 1rem;
+  margin-left: 1rem;
+}
+.footer_texte {
+  color: white;
+  margin-left: 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
