--- a/sass/index.scss
+++ b/sass/index.scss
@@ -2,58 +2,87 @@
 @use 'variables';
 @use 'mixins';
 
-.header_logo {
-    width: 150px;
-    padding-left: 75px;
-    padding-top: 8px;
+* {
+    @include mixins.font-text;
+}
+
+.header {
+    &_logo {
+        width: 170px;
+        margin: 1rem auto;
+        display: block;
+    }
+}
+
+span
+{
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .map {
     background-color: rgb(228, 228, 228);
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
+    padding: 1rem;
 }
 
 .icone_map {
-    width: 13px;
-    padding-left: 75px;
+    width: 10px;
 }
 
 .explorer {
-    background-color: #f2f2f2;
-    width: 100%;
+    background-color: #f6f6f6;
+    width: 380px;
+    height: 300px;
+    padding-top: 1rem;
     &_button {
         @include mixins.button;
         margin: 0 auto;
     }
 }
 
+.explorer_title {
+    text-align: center;
+    margin: 2rem;
+}
+.explorer_content{
+    text-align: center;
+    margin: 2rem;
+}
+
+.fonctionnement_title
+{
+    margin: 1rem;
+}
+
+.fonctionnements {
+    width: 100%;
+    height: 100%;
+}
 .fonctionnement {
     width: auto;
-    border-bottom: 50px;
-    border: solid #f2f2f2;
-    height: 50px;
+    border-radius: 20px;
+    height: 70px;
     display: flex;
     position: relative;
     padding-left: 52px;
     margin: 0.5rem;
+    background-color: #f6f6f6;
+    box-shadow: 3px 3px 3px gainsboro;
 }
 
 .fonctionnement_texte {
-    color: black;
-    font-weight: bold;
-    text-decoration: none;
-    background-color: #9356dc;
-    border-radius: 25px;
+    text-align: center;
+
 }
 
 .fonctionnement_icone {
     width: 20px;
     height: 20px;
-    position: absolute;
-    top: -2px;
-    left: -2px;
+    margin-right: 100px;
+   
 }
 
 .filtre_icone img {
@@ -69,42 +98,60 @@
 }
 
 .restaurants_articles {
-    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
 }
 
 .restaurant_article {
     display: block;
     margin: 0 auto 2rem;
+    width: 100%;
 }
 
 .restaurants {
-    background-color: #f2f2f2;
+    background-color: #f6f6f6;
 }
 
+.restaurants_title {
+    margin: 1rem;
+}
 .restaurant_article_conteneur {
     background-color: white;
     border-radius: 20px;
     display: flex;
-    width: 300px;
-    height: 200px;
+    width: 340px;
+    height: 240px;
     flex-direction: column;
-    box-shadow: 6px 6px 6px gray;
-    padding-left: 2rem;
+    box-shadow: 4px 4px 4px gainsboro;
 }
 
 .restaurant_article_image {
     width: 100%;
-    height: 130px;
+    height: 160px;
     object-fit: cover;
     border-radius: 20px 20px 0px 0px;
 }
 
 .restaurant_article_coeur {
-    width: 10px;
-    padding-left: 20px;;
-   
+    width: 25px;
+    margin-left: 18rem;
 }
 
-.restaurantt_article_contenu {
+.restaurant_article_contenu {
     padding: 5px;
+}
+
+.footer {
+    background-color: #353535;
+    &_logo {
+        width: 100px;
+        margin-top: 1rem;
+        margin-left: 1rem;
+    }
+    &_texte {
+        color: white;
+        margin-left: 1rem;
+    }
 }
