--- a/public/style.css
+++ b/public/style.css
@@ -40,9 +40,10 @@ span {
 
 .explorer {
   background-color: #f6f6f6;
-  width: 380px;
-  height: 300px;
+  width: 100%;
+  height: 100%;
   padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 .explorer_button {
   border-radius: 24px;
@@ -74,25 +75,34 @@ span {
 }
 
 .fonctionnement {
-  width: auto;
   border-radius: 20px;
-  height: 70px;
+  height: 80px;
+  width: 100%;
   display: flex;
   position: relative;
-  padding-left: 52px;
-  margin: 0.5rem;
+  margin: 1rem;
   background-color: #f6f6f6;
   box-shadow: 3px 3px 3px gainsboro;
 }
 
-.fonctionnement_texte {
-  text-align: center;
+.fonctionnement_rond {
+  border-radius: 50px 50px 50px 50px;
+  padding: 15px;
+  width: 2px;
+  height: 2px;
+  margin-right: 4rem;
+  margin-top: 1rem;
+  background-color: #9356DC;
 }
 
 .fonctionnement_icone {
-  width: 20px;
-  height: 20px;
-  margin-right: 100px;
+  width: 15px;
+  margin-top: 2rem;
+}
+
+.fonctionnement_texte {
+  margin: 2rem;
+  font-size: 18px;
 }
 
 .filtre_icone img {
@@ -105,6 +115,7 @@ span {
 .restaurants {
   width: 100%;
   height: 100%;
+  padding-top: 1rem;
 }
 
 .restaurants_articles {
@@ -132,8 +143,8 @@ span {
   background-color: white;
   border-radius: 20px;
   display: flex;
-  width: 340px;
-  height: 240px;
+  width: 100%;
+  height: 100%;
   flex-direction: column;
   box-shadow: 4px 4px 4px gainsboro;
 }
@@ -147,7 +158,8 @@ span {
 
 .restaurant_article_coeur {
   width: 25px;
-  margin-left: 18rem;
+  margin-left: 21rem;
+  margin-bottom: 1rem;
 }
 
 .restaurant_article_contenu {
