page 1er restaurant

--- a/public/style.css
+++ b/public/style.css
@@ -11,7 +11,11 @@ a {
   text-decoration: none;
 }
 
-* {
+ul {
+  list-style: none;
+}
+
+body {
   font-family: "Roboto", sans-serif;
 }
 
@@ -19,11 +23,6 @@ a {
   width: 170px;
   margin: 1rem auto;
   display: block;
-}
-
-span {
-  font-weight: bold;
-  font-size: 20px;
 }
 
 .map {
@@ -72,6 +71,8 @@ span {
 .fonctionnements {
   width: 100%;
   height: 100%;
+  counter-reset: counter_fonctionnement;
+  padding: 1rem;
 }
 
 .fonctionnement {
@@ -80,29 +81,32 @@ span {
   width: 100%;
   display: flex;
   position: relative;
-  margin: 1rem;
+  padding-left: 2rem;
+  margin-bottom: 1rem;
   background-color: #f6f6f6;
   box-shadow: 3px 3px 3px gainsboro;
+  align-items: center;
 }
-
-.fonctionnement_rond {
-  border-radius: 50px 50px 50px 50px;
-  padding: 15px;
-  width: 2px;
-  height: 2px;
-  margin-right: 4rem;
-  margin-top: 1rem;
-  background-color: #9356DC;
-}
-
 .fonctionnement_icone {
   width: 15px;
-  margin-top: 2rem;
+  margin-right: 1.5rem;
 }
-
 .fonctionnement_texte {
-  margin: 2rem;
   font-size: 18px;
+}
+.fonctionnement::before {
+  counter-increment: counter_fonctionnement;
+  content: counter(counter_fonctionnement);
+  border-radius: 50px 50px 50px 50px;
+  width: 30px;
+  height: 30px;
+  background-color: #9356DC;
+  position: absolute;
+  text-align: center;
+  line-height: 30px;
+  left: -15px;
+  top: 25px;
+  color: #FFFFFF;
 }
 
 .filtre_icone img {
@@ -158,12 +162,19 @@ span {
 
 .restaurant_article_coeur {
   width: 25px;
-  margin-left: 21rem;
-  margin-bottom: 1rem;
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
 }
 
 .restaurant_article_contenu {
-  padding: 5px;
+  padding: 1rem;
+  position: relative;
+}
+.restaurant_article_contenu span {
+  font-weight: bold;
+  font-size: 1.2rem;
+  line-height: 2rem;
 }
 
 .footer {
@@ -176,7 +187,89 @@ span {
 }
 .footer_texte {
   color: white;
-  margin-left: 1rem;
+  margin: 1rem;
+}
+
+.header_image {
+  width: 100%;
+  height: 100%;
+}
+
+.carte_restaurant {
+  background-color: #f2f2f2;
+  border-radius: 50px 50px 0 0;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 1rem;
+  box-shadow: 4px 4px 4px gainsboro;
+}
+
+.carte_article_coeur {
+  width: 20px;
+}
+
+.coeur_button_carte {
+  display: flex;
+  justify-content: space-around;
+  padding: 1rem;
+  font-family: "Shrikhand", cursive;
+}
+
+.carte_entree {
+  padding-left: 1.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.cartes_articles {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.carte_article {
+  display: block;
+  margin: 0 auto 2rem;
+  width: 100%;
+}
+
+.carte_article_conteneur {
+  background-color: white;
+  border-radius: 20px;
+  width: 100%;
+  height: 80px;
+  box-shadow: 4px 4px 4px gainsboro;
+}
+
+.carte_article_contenu {
+  padding: 0.8rem;
+  position: relative;
+}
+.carte_article_contenu span {
+  font-weight: bold;
+  font-size: 1.2rem;
+  line-height: 2rem;
+}
+
+.prix {
+  padding-left: 17rem;
+}
+
+.commander {
+  background-color: #f6f6f6;
+  width: 100%;
+  height: 100%;
+}
+.commander_button {
+  border-radius: 24px;
+  padding: 16px;
+  width: fit-content;
+  box-shadow: 4px 4px 4px gainsboro;
+  background-color: #9356DC;
+  color: #FFFFFF;
+  margin: 0 auto;
 }
 
 /*# sourceMappingURL=style.css.map */
