--- a/sass/index.scss
+++ b/sass/index.scss
@@ -92,6 +92,19 @@ body {
     }
 }
 
+
+.coeur_article_checkbox
+{
+    color: red;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    width:0;
+    transition: width 1s;
+   box-sizing: border-box;
+   
+}
+
 .filtre_icone img {
     width: 20px;
     height: 20px;
@@ -186,6 +199,15 @@ body {
     box-shadow: 4px 4px 4px gainsboro;
 }
 
+.carte_restaurant_container {
+    padding-top: 40vw;
+    background-image: var(--restaurant_background_image);
+    background-position: top;
+    background-size: contain;
+}
+
+
+
 .carte_restaurant_container1 {
     padding-top: 40vw;
     background-image: url(images/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
@@ -237,11 +259,7 @@ body {
 }
 
 .carte_article {
-    display: grid;
-    grid-template-areas:
-        "title price checkbox"
-        "description price checkbox";
-    grid-template-columns: 1fr auto 0;
+    display: flex;
     margin: 0 auto 2rem;
     width: 100%;
     background-color: white;
@@ -249,40 +267,64 @@ body {
     height: 80px;
     box-shadow: 4px 4px 4px gainsboro;
     &:hover{
-        grid-template-columns: 1fr auto 100px;
+        .carte_article_checkbox{
+            width: 100px;
+        }
+        .image_article_checkbox{
+            transform:rotateZ(360deg);
+            transition: 1s;
+        }
     }
+   overflow: hidden;
+    
 }
 
+.carte_article_content
+{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    width: 0;
+
+}
 
 .carte_article_title {
     font-weight: bold;
     font-size: 1.2rem;
     padding: 0.8rem;
-    grid-area: title;
 }
 
 .carte_article_price {
-    grid-area: price;
+
     align-self: end;
     padding: .8rem;
 }
 .carte_article_description {
-    grid-area: description;
     padding-bottom: .8rem;
     padding-left: .8rem;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 100%;
+    text-overflow: ellipsis;
 }
 
 .carte_article_checkbox
 {
-    grid-area: checkbox;
     background: #99E2D0;
-    border-radius: 0 20px 20px 0;    
+    border-radius: 0 20px 20px 0; 
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    width:0;
+    transition: width 1s;
+   box-sizing: border-box;
 }
 
 .image_article_checkbox
 {
-    grid-area: checkbox;
     width: 20px;
+    margin-left: 40px;
+
 
 }
 .prix {
