--- a/public/style.css
+++ b/public/style.css
@@ -17,8 +17,19 @@ ul {
 
 body {
   font-family: "Roboto", sans-serif;
+  animation: fadeInAnimation ease 3s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
 }
 
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .header_logo {
   width: 170px;
   margin: 1rem auto;
