--- a/sass/index.scss
+++ b/sass/index.scss
@@ -4,20 +4,7 @@
 
 body {
     @include mixins.font-text;
-
-        animation: fadeInAnimation ease 3s; 
-        animation-fill-mode: forwards; 
-        animation-iteration-count: 1; 
-        } 
-        @keyframes fadeInAnimation { 
-        0% { 
-        opacity: 0; 
-        } 
-        100% { 
-        opacity: 1; 
-        } 
-        } 
-
+}
 
 .header {
     &_logo {
@@ -105,17 +92,14 @@ body {
     }
 }
 
-
-.coeur_article_checkbox
-{
+.coeur_article_checkbox {
     color: red;
     overflow: hidden;
     display: flex;
     align-items: center;
-    width:0;
+    width: 0;
     transition: width 1s;
-   box-sizing: border-box;
-   
+    box-sizing: border-box;
 }
 
 .filtre_icone img {
@@ -168,11 +152,12 @@ body {
     border-radius: 20px 20px 0px 0px;
 }
 
-.restaurant_article_coeur {
+.restaurant_article_coeur, .restaurant_article_coeur-plein {
     width: 25px;
     position: absolute;
     right: 1rem;
     top: 1rem;
+
 }
 
 .restaurant_article_contenu {
@@ -219,8 +204,6 @@ body {
     background-size: contain;
 }
 
-
-
 .carte_restaurant_container1 {
     padding-top: 40vw;
     background-image: url(images/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
@@ -248,6 +231,7 @@ body {
 }
 .carte_article_coeur {
     width: 20px;
+    
 }
 
 .coeur_button_carte {
@@ -255,6 +239,20 @@ body {
     justify-content: space-around;
     padding: 1rem;
     font-family: "Shrikhand", cursive;
+}
+
+.coeur_button
+{
+    .restaurant_article_coeur-plein{
+        opacity: 0;
+       transition: opacity .5s;
+    }
+   
+    &:hover{
+        .restaurant_article_coeur-plein{
+            opacity: 1;
+        }
+    }
 }
 
 .carte_entree {
@@ -269,6 +267,15 @@ body {
     align-items: center;
     padding-left: 1rem;
     padding-right: 1rem;
+    
+}
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 .carte_article {
@@ -279,26 +286,33 @@ body {
     border-radius: 20px;
     height: 80px;
     box-shadow: 4px 4px 4px gainsboro;
-    &:hover{
-        .carte_article_checkbox{
+    &:hover {
+        .carte_article_checkbox {
             width: 100px;
         }
-        .image_article_checkbox{
-            transform:rotateZ(360deg);
+        .image_article_checkbox {
+            transform: rotateZ(360deg);
             transition: 1s;
         }
     }
-   overflow: hidden;
-    
+    overflow: hidden;
+    animation: fadeInAnimation ease 3s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+    opacity: 0;
+    @for $i from 0 to 5 { 
+        &:nth-child(#{$i}){
+            animation-delay: $i*250ms;
+        }
+        
+    }
 }
 
-.carte_article_content
-{
+.carte_article_content {
     display: flex;
     flex-direction: column;
     flex: 1;
     width: 0;
-
 }
 
 .carte_article_title {
@@ -308,37 +322,32 @@ body {
 }
 
 .carte_article_price {
-
     align-self: end;
-    padding: .8rem;
+    padding: 0.8rem;
 }
 .carte_article_description {
-    padding-bottom: .8rem;
-    padding-left: .8rem;
+    padding-bottom: 0.8rem;
+    padding-left: 0.8rem;
     white-space: nowrap;
     overflow: hidden;
     width: 100%;
     text-overflow: ellipsis;
 }
 
-.carte_article_checkbox
-{
-    background: #99E2D0;
-    border-radius: 0 20px 20px 0; 
+.carte_article_checkbox {
+    background: #99e2d0;
+    border-radius: 0 20px 20px 0;
     overflow: hidden;
     display: flex;
     align-items: center;
-    width:0;
+    width: 0;
     transition: width 1s;
-   box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-.image_article_checkbox
-{
+.image_article_checkbox {
     width: 20px;
     margin-left: 40px;
-
-
 }
 .prix {
     padding-left: 17rem;
@@ -381,8 +390,7 @@ body {
         grid-area: fonctionnement;
     }
 
-    .fonctionnement
-    {
+    .fonctionnement {
         align-items: center;
     }
 
@@ -399,29 +407,40 @@ body {
         gap: 1rem;
     }
 
-    .carte_restaurant_container4 {
-        padding-top: 20vw;
-        background-image: url(images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
+    .carte_restaurant_container {
+        padding-top: 30vw;
+        background-image: var(--restaurant_background_image);
         background-position: top;
         background-size: contain;
     }
-
     
-
-
+    .carte_restaurant_container1 {
+        padding-top: 30vw;
+        background-image: url(images/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
+        background-position: top;
+        background-size: contain;
+    }
+    .carte_restaurant_container2 {
+        padding-top: 30vw;
+        background-image: url(images/stil-u2Lp8tXIcjw-unsplash.jpg);
+        background-position: top;
+        background-size: contain;
+    }
+    .carte_restaurant_container3 {
+        padding-top: 30vw;
+        background-image: url(images/toa-heftiba-DQKerTsQwi0-unsplash.jpg.jpg);
+        background-position: top;
+        background-size: contain;
+    }
+    
+    .carte_restaurant_container4 {
+        padding-top: 30vw;
+        background-image: url(images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
+        background-position: top;
+        background-size: contain;
+    
+    }
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 @media (min-width: 1280px) {
     .body-home {
@@ -450,8 +469,7 @@ body {
         grid-area: fonctionnement;
     }
 
-    .fonctionnement
-    {
+    .fonctionnement {
         align-items: center;
     }
 
@@ -468,17 +486,41 @@ body {
         gap: 1rem;
     }
 
-    .carte_restaurant_container4 {
+    .carte_restaurant_container {
         padding-top: 40vw;
+        background-image: var(--restaurant_background_image);
+        background-position: top;
+        background-size: contain;
+    }
+    
+    .carte_restaurant_container1 {
+        padding-top: 20vw;
+        background-image: url(images/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
+        background-position: top;
+        background-size: contain;
+    }
+    .carte_restaurant_container2 {
+        padding-top: 20vw;
+        background-image: url(images/stil-u2Lp8tXIcjw-unsplash.jpg);
+        background-position: top;
+        background-size: contain;
+    }
+    .carte_restaurant_container3 {
+        padding-top: 20vw;
+        background-image: url(images/toa-heftiba-DQKerTsQwi0-unsplash.jpg.jpg);
+        background-position: top;
+        background-size: contain;
+    }
+    
+    .carte_restaurant_container4 {
+        padding-top: 20vw;
         background-image: url(images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
         background-position: top;
         background-size: contain;
     }
 
-    .carte_restaurant
-    {
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
+    .carte_restaurant {
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
     }
-
 }
