--- a/sass/index.scss
+++ b/sass/index.scss
@@ -32,24 +32,28 @@ body {
     height: 100%;
     padding-top: 1rem;
     padding-bottom: 1rem;
+    display: flex; 
+    flex-direction: column;
+
+   &_title {
+        text-align: center;
+        margin: 2rem;
+    }
     &_button {
         @include mixins.button;
         margin: 0 auto;
     }
+
+    &_content {
+        text-align: center;
+        margin: 2rem;
+    }
 }
 
-.explorer_title {
-    text-align: center;
-    margin: 2rem;
-}
-.explorer_content {
-    text-align: center;
-    margin: 2rem;
-}
 
-.fonctionnement_title {
-    margin: 1rem;
-}
+
+
+
 
 .fonctionnements {
     width: 100%;
@@ -90,6 +94,9 @@ body {
         top: 25px;
         color: variables.$font-color-inversed;
     }
+    &_title {
+        margin: 1rem;
+    }
 }
 
 .coeur_article_checkbox {
@@ -113,73 +120,88 @@ body {
     width: 100%;
     height: 100%;
     padding-top: 1rem;
-}
-
-.restaurants_articles {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1rem;
-}
-
-.restaurant_article {
-    display: block;
-    margin: 0 auto 2rem;
-    width: 100%;
-}
-
-.restaurants {
     background-color: #f6f6f6;
-}
 
-.restaurants_title {
-    margin: 1rem;
-}
-.restaurant_article_conteneur {
-    background-color: white;
-    border-radius: 20px;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    flex-direction: column;
-    box-shadow: 4px 4px 4px gainsboro;
-}
+    &_articles {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem;
+    }
 
-.restaurant_article_image {
-    width: 100%;
-    height: 160px;
-    object-fit: cover;
-    border-radius: 20px 20px 0px 0px;
-}
-
-.restaurant_article_coeur, .restaurant_article_coeur-plein {
-    width: 25px;
-    position: absolute;
-    right: 1rem;
-    top: 1rem;
-
-}
-
-.restaurant_article_contenu {
-    padding: 1rem;
-    position: relative;
-    span {
-        font-weight: bold;
-        font-size: 1.2rem;
-        line-height: 2rem;
+    &_title {
+        margin: 1rem;
     }
 }
 
+.restaurant{
+
+    &_article {
+        display: block;
+        margin: 0 auto 2rem;
+        width: 100%;
+        &_conteneur {
+            background-color: white;
+            border-radius: 20px;
+            display: flex;
+            width: 100%;
+            height: 100%;
+            flex-direction: column;
+            box-shadow: 4px 4px 4px gainsboro;
+        }
+        
+        &_image {
+            width: 100%;
+            height: 160px;
+            object-fit: cover;
+            border-radius: 20px 20px 0px 0px;
+        }
+        
+        &_coeur, &_coeur-plein {
+            width: 25px;
+            position: absolute;
+            right: 1rem;
+            top: 1rem;
+        
+        }
+        
+        &_contenu {
+            padding: 1rem;
+            position: relative;
+            span {
+                font-weight: bold;
+                font-size: 1.2rem;
+                line-height: 2rem;
+            }
+        }
+    
+    }
+
+}
+
+
+
+
+
 .footer {
     background-color: #353535;
+    display: flex;
+    flex-direction: column;
     &_logo {
         width: 100px;
         margin-top: 1rem;
         margin-left: 1rem;
     }
     &_texte {
-        color: white;
-        margin: 1rem;
+        color: white;;
+        &_icone
+        {
+            height: 1rem;
+            width: 2rem;
+        }
+        &_item{
+            margin: 1rem;
+        }
     }
 }
 
@@ -204,31 +226,7 @@ body {
     background-size: contain;
 }
 
-.carte_restaurant_container1 {
-    padding-top: 40vw;
-    background-image: url(images/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
-    background-position: top;
-    background-size: contain;
-}
-.carte_restaurant_container2 {
-    padding-top: 40vw;
-    background-image: url(images/stil-u2Lp8tXIcjw-unsplash.jpg);
-    background-position: top;
-    background-size: contain;
-}
-.carte_restaurant_container3 {
-    padding-top: 40vw;
-    background-image: url(images/toa-heftiba-DQKerTsQwi0-unsplash.jpg.jpg);
-    background-position: top;
-    background-size: contain;
-}
 
-.carte_restaurant_container4 {
-    padding-top: 40vw;
-    background-image: url(images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
-    background-position: top;
-    background-size: contain;
-}
 .carte_article_coeur {
     width: 20px;
     
@@ -236,7 +234,7 @@ body {
 
 .coeur_button_carte {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     padding: 1rem;
     font-family: "Shrikhand", cursive;
 }
@@ -256,9 +254,17 @@ body {
 }
 
 .carte_entree {
+    all: unset;
     padding-left: 1.5rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
+    width: 100%;
+
+}
+
+.carte_content{
+    display: flex;
+    flex-direction: column;
 }
 
 .cartes_articles {
@@ -306,6 +312,13 @@ body {
         }
         
     }
+    &_title {
+        @include mixins.elipsis;
+        font-weight: bold;
+        font-size: 1.2rem;
+        padding: 0.8rem;
+
+    }
 }
 
 .carte_article_content {
@@ -315,24 +328,21 @@ body {
     width: 0;
 }
 
-.carte_article_title {
-    font-weight: bold;
-    font-size: 1.2rem;
-    padding: 0.8rem;
-}
+
 
 .carte_article_price {
     align-self: end;
     padding: 0.8rem;
 }
+
 .carte_article_description {
+    @include mixins.elipsis;
     padding-bottom: 0.8rem;
     padding-left: 0.8rem;
-    white-space: nowrap;
-    overflow: hidden;
     width: 100%;
-    text-overflow: ellipsis;
 }
+
+
 
 .carte_article_checkbox {
     background: #99e2d0;
@@ -414,36 +424,11 @@ body {
         background-size: contain;
     }
     
-    .carte_restaurant_container1 {
-        padding-top: 30vw;
-        background-image: url(images/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
-        background-position: top;
-        background-size: contain;
-    }
-    .carte_restaurant_container2 {
-        padding-top: 30vw;
-        background-image: url(images/stil-u2Lp8tXIcjw-unsplash.jpg);
-        background-position: top;
-        background-size: contain;
-    }
-    .carte_restaurant_container3 {
-        padding-top: 30vw;
-        background-image: url(images/toa-heftiba-DQKerTsQwi0-unsplash.jpg.jpg);
-        background-position: top;
-        background-size: contain;
-    }
     
-    .carte_restaurant_container4 {
-        padding-top: 30vw;
-        background-image: url(images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
-        background-position: top;
-        background-size: contain;
-    
-    }
 }
 
 @media (min-width: 1280px) {
-    .body-home {
+    .body_home {
         grid-gap: 1rem;
         padding: 1rem;
         display: grid;
@@ -463,14 +448,17 @@ body {
 
     .explorer {
         grid-area: explorer;
+        border-radius: 30px;
+        justify-content: center;
+        
     }
 
     .fonctionnement_section {
         grid-area: fonctionnement;
     }
 
-    .fonctionnement {
-        align-items: center;
+    .fonctionnement_texte{
+        text-align: center;
     }
 
     .restaurants {
@@ -486,41 +474,23 @@ body {
         gap: 1rem;
     }
 
+    .restaurant_article {
+        max-width: 600px;
+    }
     .carte_restaurant_container {
-        padding-top: 40vw;
-        background-image: var(--restaurant_background_image);
-        background-position: top;
-        background-size: contain;
+        padding-top: 50vh ;
+       
     }
     
-    .carte_restaurant_container1 {
-        padding-top: 20vw;
-        background-image: url(images/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
-        background-position: top;
-        background-size: contain;
-    }
-    .carte_restaurant_container2 {
-        padding-top: 20vw;
-        background-image: url(images/stil-u2Lp8tXIcjw-unsplash.jpg);
-        background-position: top;
-        background-size: contain;
-    }
-    .carte_restaurant_container3 {
-        padding-top: 20vw;
-        background-image: url(images/toa-heftiba-DQKerTsQwi0-unsplash.jpg.jpg);
-        background-position: top;
-        background-size: contain;
-    }
     
-    .carte_restaurant_container4 {
-        padding-top: 20vw;
-        background-image: url(images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
-        background-position: top;
-        background-size: contain;
+    .carte_content {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
     }
 
-    .carte_restaurant {
-        display: grid;
-        grid-template-rows: repeat(3, 1fr);
+    .footer
+    {
+        
     }
 }
+
