--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -6,7 +6,7 @@
     padding: 16px;
     width: fit-content;
     box-shadow: 4px 4px 4px gainsboro;
-    background-color: variables.$primary-color;
+    background: variables.$gradient;
     color: variables.$font-color-inversed;
 }
 
