--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,4 @@
 $primary-color:#9356DC;
 $secondary-color:#FF79DA;
 $font-color-inversed:#FFFFFF;
+$gradient:linear-gradient(352deg,#{$primary-color},#{$secondary-color})
